# routes/users.js
@@ -4,6 +4,8 @@ const userController = require("../controllers/users");
 
 router.get("/", userController.getAll);
 router.get("/:id", userController.getSingle);
-
+router.post("/", userController.createUser);
+router.put("/id-to-modify/:id", userController.updateUser);
+router.delete("/:id", userController.deleteUser);
 
 module.exports = router;
